Major Dark Mode audit, Full Screen option, and minor fixes.

--- a/assets/js/Components/Widgets/SortableTable.css
+++ b/assets/js/Components/Widgets/SortableTable.css
@@ -152,5 +152,6 @@
 }
 
 .paginationButton.selected {
-  background-color: var(--pill-info-border);
+  border-color: var(--pill-info-border);
+  background-color: var(--pill-info-background);
 }
